Color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div id="container">
-            <div id="cabecera">Hyperblog
+            <div id="cabecera"> <img id="logo" src="imagenes/logo.png.png"/> Hyperblog
                 <span id="tagline">Tu blog de confianza</span>
             </div> 
             <div id="post">
