--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
               <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho m&aacute;s que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
               <p>Suscribete y dale like</p>
             </div>
-            <div id="footer">Hecho con amor en Platzi <3</div>
+            <div id="footer">Hecho con amor en Platzi  &lt;3</div>
         </div>
     </body>
 </html>
